designed edit page, strings for two colors in text, updated database handler category names (was present)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Bime</string>
+    <string name="add_activity">Add new <font color="#FF8C00">activity</font></string>
+    <string name="edit_activity">Edit <font color="#FF8C00">activity</font></string>
 </resources>
