--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="headline_dashboard">Welcome back, &lt;font color="#FF8C00">%1$s&lt;/font>!</string>
     <string name="headline_overview">How was your <font color="#FF8C00">week</font>?</string>
     <string name="week_cta">Do you want to know how your <font color="#FF8C00"><b>whole week</b></font> was?</string>
+    <string name="no_data_to_display_start_by_adding_a_new_activity"><b>No data to display.</b>\n<small>Start by adding a new activity!</small></string>
 </resources>
